force-app/main/default/objects/Trigger_Setting__mdt/fields/Disable_After_Delete__c.field-meta.xml
<CustomField>
    <fullName>Disable_After_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable After Delete</label>
    <type>Checkbox</type>
</CustomField>