force-app/main/default/objects/Trigger_Setting__mdt/fields/Disable_Before_Update__c.field-meta.xml
<CustomField>
    <fullName>Disable_Before_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Before Update</label>
    <type>Checkbox</type>
</CustomField>