force-app/main/default/objects/Trigger_Setting__mdt/fields/Disable_Finally__c.field-meta.xml
<CustomField>
    <fullName>Disable_Finally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Finally</label>
    <type>Checkbox</type>
</CustomField>