force-app/main/default/objects/Trigger_Setting__mdt/fields/Disable_Insert__c.field-meta.xml
<CustomField>
    <fullName>Disable_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Insert</label>
    <type>Checkbox</type>
</CustomField>